--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="row">
 
           <div class="col-md-4" data-aos="zoom-in" id="passportimage">
-            <img src="./images/passportPicture1.jpg" alt="passportPicture"
+            <img src="passportPicture1.jpg" alt="passportPicture"
               class="card-img img-fluid passport">
           </div>
 
@@ -262,7 +262,7 @@
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
             <div class="card h-100">
-              <img src="./images/Picture1.jpg" class="card-img-top" alt="...">
+              <img src="Picture1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">IOT ROVER </h5>
                 <p class="card-text">IOT robot means it is controlled by a human
@@ -275,7 +275,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="./images/Picture2.jpg" class="card-img-top" alt="...">
+              <img src="Picture2.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">PCB DESIGN</h5>
                 <p class="card-text">PCB design is the entire process of
@@ -289,7 +289,7 @@
           </div>
           <div class="col">
             <div class="card h-100">
-              <img src="./images/Picture3.jpg" class="card-img-top" alt="...">
+              <img src="Picture3.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">WEB DEVELOPMENT</h5>
                 <p class="card-text">Web development is the act of building,
